--- a/templates/visit.html
+++ b/templates/visit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ visitor }}'s visit</title>
+    <title>{{ visit.visitor }}'s visit</title>
 </head>
 <body>
     <p>
