--- a/templates/visit.html
+++ b/templates/visit.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ visit.visitor }}'s visit</title>
+    <title>User</title>
 </head>
 <body>
     <p>
-        <strong>{{ visit.visitor }} will arrive at {{ visit.date_time }}</strong><br>
-        Reason: {{ visit.reason }}
+        <strong>{{ visit.visitor }} is added with email {{ visit.email }}</strong><br>
     </p>
 
 </body>
