--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lietotāji</title>
+    <title>Users</title>
 </head>
 <h1>Full list of users</h1>
 <body>
     <ul>
         {% for visit in visits %}
         <li>
-            <strong>{{ visit.visitor }}</strong> <br>
-            Laiks: {{ visit.date_time }} <br>
-            Iemesls: {{ visit.reason }} <br>
+            <strong>{{ visit.user }}</strong> <br>
+            E-mail: {{ visit.email }} <br>
         </li>
         {% endfor %}
     </ul>
