--- a/templates/user.html
+++ b/templates/user.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ visit.user }}'s visit</title>
+    <title>User added</title>
 </head>
 <body>
     <p>
