--- a/templates/user.html
+++ b/templates/user.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <p>
-        <strong>Username: {{ visit.user }} </strong><br>
-        Email: {{ visit.email }}<br>
+        <strong>Username: {{ user.user }} </strong><br>
+        Email: {{ user.email }}<br>
     </p>
 
 </body>
