--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Users</title>
-</head>
-<h1>Full list of users</h1>
-<body>
+{% extends 'base.html'%}
+{% block content %}
     <ul>
         {% for user in users %}
         <li>
@@ -17,5 +11,4 @@
         </li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
